# eis-batch-analysis

./: .gitignore  README.md  main.py  pyproject.toml  streamlit_app.py
core/: __init__.py  drt.py  filtering.py  io_utils.py  mb_parser.py  plotting.py  validation.py
gui/: __init__.py  app.py  figure_panes.py  main_window.py  theme.py  workers.py
