[project]
name = "eis-batch-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "pyimpspec>=5.1.3",
    "pyprobe-data>=2.6.0",
    "pyside6>=6.11.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = [
    "hatchling>=1.31.0",
]
