[project]
name = "eis-batch-analysis"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cvxopt>=1.3.3",
    "matplotlib>=3.11.0",
    "pyimpspec>=5.1.3",
    "pyprobe-data>=2.6.0",
    "pyqtdarktheme-fork>=2.3.6",
    "pyside6>=6.11.1",
    "streamlit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core"]

[dependency-groups]
dev = [
    "hatchling>=1.31.0",
]
